<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_init"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/viewPager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            android:fontFamily="@font/roboto_variable"
            android:id="@+id/title_init"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@+id/title_init"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/product_one_card"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/product_one_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albarino" />

                <TextView
                    android:id="@+id/product_one_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_one_product"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/product_one_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_one_product"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"/>

                <Button
                    android:id="@+id/product_one_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_product"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/btnPrimary"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@+id/product_one_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/product_two_card"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/product_two_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/albillo" />

                <TextView
                    android:id="@+id/product_two_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_two_product"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/product_two_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_two_product"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"/>

                <Button
                    android:id="@+id/product_two_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_product"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/btnPrimary"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
