<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.NosotrosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:text="Nosotros"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/nosotros_one"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nosotros_one" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="Nuesta Misión"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/nosotros_two"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nosotros_two" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="Nuestro Valor"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/nosotros_three"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nosotros_three" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="Nuestro Desafío"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/nosotros_four"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>
